--- a/src/pages/login/styles/userLogin.less
+++ b/src/pages/login/styles/userLogin.less
@@ -36,11 +36,11 @@
     width: 100%;
     height: 45px;
     border: 1px solid #409eff;
-    background: none;
+    ////background: none;
     font-size: 18px;
     letter-spacing: 2px;
     font-weight: 300;
-    color: #409eff;
+    //color: #409eff;
     cursor: pointer;
     margin-top: 30px;
     transition: 0.25s;
